--- a/generators/app/templates/biblatex.preamble.en.tex
+++ b/generators/app/templates/biblatex.preamble.en.tex
@@ -59,7 +59,7 @@
 \printtext[bibhyperref]{\printnames{labelname}}}
 {\multicitedelim}
 {\usebibmacro{postnote}}
-<% if (documentclass == "ustutt") { %>
+<% if (documentclass == "ustutt") { -%>
 
 % Reduce size of bib font: http://tex.stackexchange.com/questions/329/how-to-change-font-size-for-bibliography
 \renewcommand{\bibfont}{\normalfont\small}
