--- a/generators/app/templates/hyperref.preamble.en.tex
+++ b/generators/app/templates/hyperref.preamble.en.tex
@@ -33,8 +33,7 @@
   pdfdisplaydoctitle=true, % Dokumententitel statt Dateiname im Fenstertitel
   pdfpagemode=UseOutlines, % Bookmarks im Viewer anzeigen
   pdfpagelabels=true,      % set PDF page labels
-  pdfpagelayout=TwoPageRight, % zweiseitige Darstellung: ungerade Seiten
-  									 % rechts im PDF-Viewer
+  pdfpagelayout=TwoPageRight, % zweiseitige Darstellung: ungerade Seiten rechts im PDF-Viewer
   %pdfpagelayout=SinglePage, % einseitige Darstellung
 <% } else { -%>
   hidelinks,
