--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -503,10 +503,7 @@
 
 %% --- Zusammenfassung/Kurzfassung -------------------------------
 \chapter*{Kurzfassung}
-\begin{otherlanguage}{ngerman}
-%Silbentrennung Deutsch
 Kurzfassung der Arbeit.
-\end{otherlanguage}
 \clearpage
 
 %% --- Abstract Page---------------------------------------------
@@ -599,7 +596,8 @@ What can they do with your research.
 
 %% --- Acknowledgements page------------------------------------
 \chapter*{Danksagungen}
-I would like to thank the little green men from Mars. Without their anal probing equipment, the medical experiments on the monkeys described in this thesis would have been considerably more unpleasant for all parties involved.
+I would like to thank the little green men from Mars.
+Without their probing equipment, the medical experiments on the monkeys described in this thesis would have been considerably more unpleasant for all parties involved.
 \clearpage
 
 <%#
