--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -479,15 +479,13 @@
 %% --- Zusammenfassung/Kurzfassung -------------------------------
 \chapter*{Kurzfassung}
 \begin{otherlanguage}{ngerman}
-%Silbentrennung Deutsch
-Kurzfassung der Arbeit.
+  %Silbentrennung Deutsch
+  Kurzfassung der Arbeit.
 \end{otherlanguage}
 \clearpage
 
 %% --- Abstract Page---------------------------------------------
 \chapter*{Abstract}
-\begin{otherlanguage}{american}
-% Silbentrennung auf Englisch
 <% break; default: -%>
 <% break; } -%>
 <% if (howtotext) { -%>
@@ -570,12 +568,12 @@ What can they do with your research.
 <% break; case "ustutt": -%>
 %\pagestyle{justpagenums}
 \pagestyle{scrheadings}
-\end{otherlanguage}
 \clearpage
 
 %% --- Acknowledgements page------------------------------------
 \chapter*{Danksagungen}
-I would like to thank the little green men from Mars. Without their anal probing equipment, the medical experiments on the monkeys described in this thesis would have been considerably more unpleasant for all parties involved.
+I would like to thank the little green men from Mars.
+Without their probing equipment, the medical experiments on the monkeys described in this thesis would have been considerably more unpleasant for all parties involved.
 \clearpage
 
 <%#
