--- a/generators/app/templates/math.preamble.en.tex
+++ b/generators/app/templates/math.preamble.en.tex
@@ -1,23 +1,17 @@
 %math stuff
 \usepackage[
-   centertags, % (default) center tags vertically
-   %tbtags,    % 'Top-or-bottom tags': For a split equation, place equation numbers level
-               % with the last (resp. first) line, if numbers are on the right (resp. left).
-   sumlimits,  %(default) Place the subscripts and superscripts of summation
-               % symbols above and below
-   %nosumlimits, % Always place the subscripts and superscripts of summation-type
-               % symbols to the side, even in displayed equations.
-   intlimits,  % Like sumlimits, but for integral symbols.
-   %nointlimits, % (default) Opposite of intlimits.
-   namelimits, % (default) Like sumlimits, but for certain 'operator names' such as
-               % det, inf, lim, max, min, that traditionally have subscripts placed underneath
-               % when they occur in a displayed equation.
-   %nonamelimits, % Opposite of namelimits.
-   %leqno,     % Place equation numbers on the left.
-   %reqno,     % Place equation numbers on the right.
-   fleqn,     % Position equations at a fixed indent from the left margin
-   			  % rather than centered in the text column.
-]{amsmath} %
+  centertags,    % (default) center tags vertically
+  % tbtags,        % 'Top-or-bottom tags': For a split equation, place equation numbers level with the last (resp. first) line, if numbers are on the right (resp. left).
+  sumlimits,    % (default) Place the subscripts and superscripts of summation symbols above and below
+  % nosumlimits,   % Always place the subscripts and superscripts of summation-type symbols to the side, even in displayed equations.
+  intlimits,     % Like sumlimits, but for integral symbols.
+  % nointlimits,   % (default) Opposite of intlimits.
+  namelimits,    % (default) Like sumlimits, but for certain 'operator names' such as det, inf, lim, max, min, that traditionally have subscripts placed underneath when they occur in a displayed equation.
+  % nonamelimits,  % Opposite of namelimits.
+  % leqno,         % Place equation numbers on the left.
+  % reqno,         % Place equation numbers on the right.
+  fleqn,         % Position equations at a fixed indent from the left margin rather than centered in the text column.
+]{amsmath}
 \SetMathAlphabet{\mathcal}{normal}{OMS}{amsa}{m}{n} %% AMS font for mathcal
 
 %%% Doc: http://mirror.ctan.org/tex-archive/macros/latex/contrib/mh/doc/mathtools.pdf
