--- a/generators/app/templates/tables.preamble.de.tex
+++ b/generators/app/templates/tables.preamble.de.tex
@@ -25,7 +25,6 @@
 % Tabellen ueber mehere Seiten
 % ----------------------------
 %%% Doc: http://mirror.ctan.org/tex-archive/macros/latex/contrib/carlisle/ltxtable.pdf
-% \usepackage{ltxtable} % Longtable + tabularx
-                        % (multi-page tables) + (auto-sized columns in a fixed width table)
+% \usepackage{ltxtable} % Longtable + tabularx (multi-page tables) + (auto-sized columns in a fixed width table)
 % -> nach hyperref laden
 <% } -%>
