--- a/generators/app/templates/thesis-additions.examples.en.tex
+++ b/generators/app/templates/thesis-additions.examples.en.tex
@@ -4,7 +4,8 @@
 Referencetest: \Cref{ssec:example}, \cref{fig:Abbildung} und \cref{alg:example}.
 
 <%- bexample %>
-Checkmark: \dingcheck. Crossmark: \dingcross.
+Checkmark: \dingcheck.
+Crossmark: \dingcross.
 <%- eexample %>
 
 \begin{figure}
@@ -33,12 +34,12 @@ Checkmark: \dingcheck. Crossmark: \dingcross.
 \end{algorithm}
 
 \begin{algorithm}
-\caption{Algorithmus 2}
-\label{alg:example2}
-\begin{algorithmic}[1]
-\State $a \gets 0$
-\State State 2\label{alg2:state2}
-\end{algorithmic}
+  \caption{Algorithmus 2}
+  \label{alg:example2}
+  \begin{algorithmic}[1]
+    \State $a \gets 0$
+    \State State 2\label{alg2:state2}
+  \end{algorithmic}
 \end{algorithm}
 
 \Cref{alg:example} hat bereits einen Algorithmus gezeigt.
@@ -46,8 +47,8 @@ Test der Zeilenreferenzierung: Zeile~\ref{alg1:state2} (\cref{alg:example}) und 
 
 <%= heading3 %>{Definitionen}
 \begin{definition}[Title]
-\label{def:def1}
-Definition Text
+  \label{def:def1}
+  Definition Text
 \end{definition}
 
 \Cref{def:def1} zeigt \ldots
@@ -55,78 +56,79 @@ Definition Text
 <%= heading3 %>{Aufzählungen}
 
 \begin{enumerate}[label=\alph*)]
-\item a
-\item b
-\item c
-\item d
+  \item a
+  \item b
+  \item c
+  \item d
 \end{enumerate}
 
 Equivalent to paralist's inparaenum:
 \begin{enumerate*}[label=\alph*)]
-\item a
-\item b
-\item c
-\item d
+  \item a
+  \item b
+  \item c
+  \item d
 \end{enumerate*}
 
 \begin{description}
-\item[first] Erstens
-\item[second] Zweitens
-\item[third] Drittens
+  \item[first] Erstens
+  \item[second] Zweitens
+  \item[third] Drittens
 \end{description}
 
 \begin{description}
-\item[\texttt{first}] Erstens
-\item[\texttt{second}] Zweitens
-\item[\texttt{third}] Drittens
+  \item[\texttt{first}] Erstens
+  \item[\texttt{second}] Zweitens
+  \item[\texttt{third}] Drittens
 \end{description}
 
 %works only if package enumitem is loaded
 \begin{description}[font=\ttfamily]
-\item[first] Erstens
-\item[second] Zweitens
-\item[third] Drittens
+  \item[first] Erstens
+  \item[second] Zweitens
+  \item[third] Drittens
 \end{description}
 
 \begin{description}[style=unboxed]
-\item[first label with a long description text breaking over one line. Enabled by enumitem package] Erstens
-\item[second] Zweitens
-\item[third] Drittens
+  \item[first label with a long description text breaking over one line. Enabled by enumitem package] Erstens
+  \item[second] Zweitens
+  \item[third] Drittens
 \end{description}
 
 \begin{Description}
-\item[first label with a long description text breaking over one line. Defined in template.tex] Erstens
-\item[second] Zweitens
-\item[third] Drittens
+  \item[first label with a long description text breaking over one line. Defined in template.tex] Erstens
+  \item[second] Zweitens
+  \item[third] Drittens
 \end{Description}
 
 \begin{itemize}
-\item Erstens
-\item Zweitens
-\item Drittens
+  \item Erstens
+  \item Zweitens
+  \item Drittens
 \end{itemize}
 
-Optionaler Parameter ändert den Marker, der vorangestellt ist. Siehe \url{http://www.weinelt.de/latex/item.html}.
+Optionaler Parameter ändert den Marker, der vorangestellt ist.
+Siehe \url{http://www.weinelt.de/latex/item.html}.
 \begin{itemize}
-\item[A] Erstens
-\item[B] Zweitens
-\item[C] Drittens
+  \item[A] Erstens
+  \item[B] Zweitens
+  \item[C] Drittens
 \end{itemize}
 
 Falsche Benutzung des optionalen Parameters wie folgt:
 \begin{itemize}
-\item[first] Erstens
-\item[second] Zweitens
-\item[third] Drittens
+  \item[first] Erstens
+  \item[second] Zweitens
+  \item[third] Drittens
 \end{itemize}
 Dabei ist zu beachten, dass es sich bei Einbindung von \texttt{enumitem} anders verhält als bei \texttt{paralist}.
 
 <%= heading3 %>{fquote}
 
 \begin{fquote}[T.\ Informatiker]
-Bis nächsten Freitag ist das Programm fertig.
+  Bis nächsten Freitag ist das Programm fertig.
 \end{fquote}
 
 \begin{gfquote}{T.\ Informatiker}
-Bis nächsten Freitag ist das Programm fertig.
+  Bis nächsten Freitag ist das Programm fertig.
 \end{gfquote}
