Full support for uni-stuttgart-dissertation-template (#337)

--- a/generators/app/templates/footnotes.preamble.en.tex
+++ b/generators/app/templates/footnotes.preamble.en.tex
@@ -4,22 +4,20 @@
 %%% Doc: http://mirror.ctan.org/tex-archive/macros/latex/contrib/footmisc/footmisc.pdf
 %
 \usepackage[
-   bottom,      % Footnotes appear always on bottom. This is necessary
-                % especially when floats are used
-   stable,      % Make footnotes stable in section titles
-   % perpage,     % Reset on each page
-   %para,       % Place footnotes side by side of in one paragraph.
-   %side,       % Place footnotes in the margin
-   ragged,      % Use RaggedRight
-   %norule,     % suppress rule above footnotes
-   multiple,    % rearrange multiple footnotes intelligent in the text.
-   %symbol,     % use symbols instead of numbers
+  bottom,      % Footnotes appear always on bottom. This is necessary specially when floats are used
+  stable,      % Make footnotes stable in section titles
+  % perpage,     % Reset on each page
+  % para,        % Place footnotes side by side of in one paragraph.
+  % side,        % Place footnotes in the margin
+  ragged,      % Use RaggedRight
+  % norule,      % Suppress rule above footnotes
+  multiple,    % Rearrange multiple footnotes intelligent in the text.
+  % symbol,      % Use symbols instead of numbers
 ]{footmisc}
 
 \counterwithout{footnote}{chapter} % Continuous numbering of footnotes across chapters
 
-\interfootnotelinepenalty=10000 % Verhindert das Fortsetzen von
-                                % Fussnoten auf der gegenüberligenden Seite
+\interfootnotelinepenalty=10000 % Verhindert das Fortsetzen von Fussnoten auf der gegenüberligenden Seite
 
 <% } -%>
 % EN: Put footnotes below floats
