--- a/generators/app/templates/hyperref.preamble.en.tex
+++ b/generators/app/templates/hyperref.preamble.en.tex
@@ -1,7 +1,8 @@
 % Enable that parameters of \cref{}, \ref{}, \cite{}, ... are linked so that a reader can click on the number an jump to the target in the document
 \usepackage{hyperref}
 
-<% if (documentclass != "ustutt") { %>% Enable hyperref without colors and without bookmarks
+<% if (documentclass != "ustutt") { -%>
+% Enable hyperref without colors and without bookmarks
 <% } -%>
 \hypersetup{
 <% if (documentclass == "ustutt") { -%>
@@ -32,8 +33,7 @@
   pdfdisplaydoctitle=true, % Dokumententitel statt Dateiname im Fenstertitel
   pdfpagemode=UseOutlines, % Bookmarks im Viewer anzeigen
   pdfpagelabels=true,      % set PDF page labels
-  pdfpagelayout=TwoPageRight, % zweiseitige Darstellung: ungerade Seiten
-  									 % rechts im PDF-Viewer
+  pdfpagelayout=TwoPageRight, % zweiseitige Darstellung: ungerade Seiten rechts im PDF-Viewer
   %pdfpagelayout=SinglePage, % einseitige Darstellung
 <% } else { -%>
   hidelinks,
