--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -596,8 +596,8 @@ Kurzfassung der Arbeit.
 
 %% --- Acknowledgements page------------------------------------
 \chapter*{Danksagungen}
-I would like to thank the little green men from Mars.
-Without their probing equipment, the medical experiments on the monkeys described in this thesis would have been considerably more unpleasant for all parties involved.
+Ich möchte mich bei den kleinen grünen Männchen vom Mars bedanken.
+Ohne ihre Sondiergeräte wären die in dieser Arbeit beschriebenen medizinischen Experimente an den Affen für alle Beteiligten wesentlich unangenehmer gewesen.
 \clearpage
 
 <%#
