--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -16,7 +16,7 @@
 <% if (requiresShellEscape) { -%>
 % !TeX TXS-program:compile = txs:///<%= reallatexcompiler %>/[--shell-escape]
 <% } -%>
-% !BIB program = <% if (bibtextool == "biblatex") { %>biber%< } else { %>bibtex%< } %>
+% !BIB program = <% if (bibtextool == "biblatex") { %>biber<% } else { %>bibtex<% } %>
 % -*- coding:utf-8 mod:LaTeX -*-
 <% switch (documentclass) { case "lncs": -%>
 
