Add missing input for commands.tex

--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -293,6 +293,8 @@
   % May not be hypphenated
   AROMA TOSCA BPMN OASIS OMG DMTF IT DevOps
 }
+
+\input{commands}
 <% switch (documentclass) { case "acmart": -%>
 
 \acmConference[short-conference-name]{full-conference-name}{November 02--06, 2021}{City, Country}
