Move algrenewcommand to algorithms.preabmle.en.tex

--- a/generators/app/templates/algorithms.preamble.en.tex
+++ b/generators/app/templates/algorithms.preamble.en.tex
@@ -10,3 +10,6 @@
 
 \floatname{algorithm}{Algorithmus}
 \renewcommand{\listalgorithmname}{Algorithmenverzeichnis}
+
+\newcommand{\commentchar}{\ensuremath{/\mkern-4mu/}}
+\algrenewcommand{\algorithmiccomment}[1]{\hfill $\commentchar$ #1}
