Fix indent for German ACM

--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -1193,10 +1193,10 @@ Hier bitte einen kurzen Durchgang durch die Arbeit.
 ...und anschließend einen Ausblick.
 <% } -%>
 
-<% switch (documentclass) { case "lncs": -%>
+<% indent = ''; switch (documentclass) { case "lncs": -%>
 \subsubsection*{Danksagungen}
 
-<% break; case "acmart": -%>
+<% break; case "acmart": indent = '  ' -%>
 \begin{acks}
 <% break; case "ieee": -%>
 % regular IEEE prefers the singular form
@@ -1205,14 +1205,14 @@ Hier bitte einen kurzen Durchgang durch die Arbeit.
 <% break; default: -%>
 <% break; } -%>
 <% if (isPaper) { -%>
-Identification of funding sources and other support, and thanks to individuals and groups that assisted in the research and the preparation of the work should be included in an acknowledgment section, which is placed just before the reference section in your document \cite{acmart}.
+<%= indent %>Identification of funding sources and other support, and thanks to individuals and groups that assisted in the research and the preparation of the work should be included in an acknowledgment section, which is placed just before the reference section in your document \cite{acmart}.
 <% if (howtotext) { -%>
 
-The hints on writing a paper/thesis are taken from Dirk Fahland's \href{https://github.com/dfahland/Master-or-Bachelor-thesis-Template-Eindhoven-University-of-Technology}{LaTeX template for Bachelor and Master theses at Eindhoven University of Technology}.
+<%= indent %>The hints on writing a paper/thesis are taken from Dirk Fahland's \href{https://github.com/dfahland/Master-or-Bachelor-thesis-Template-Eindhoven-University-of-Technology}{LaTeX template for Bachelor and Master theses at Eindhoven University of Technology}.
 <% } -%>
 <% if (documentclass == 'acmart') { -%>
 
-For more \LaTeX{} hints for ACM read on at \url{https://www.acm.org/publications/taps/latex-best-practices}.
+<%= indent %>For more \LaTeX{} hints for ACM read on at \url{https://www.acm.org/publications/taps/latex-best-practices}.
 \end{acks}
 <% } -%>
 <% } -%>
