Switch to minim-math

--- a/generators/app/templates/font.preamble.en.tex
+++ b/generators/app/templates/font.preamble.en.tex
@@ -52,7 +52,7 @@ lualatex
 ###########################################################################
 -%>
 <%= indent %>\usepackage[no-math]{fontspec}
-<%= indent %>\usepackage{unicode-math}
+<%= indent %>\usepackage{minim-math}
 <% switch (font) { case "arial": -%>
 <%# Arial and LuaLaTeX -%>
 <%# -%>
