--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -135,7 +135,7 @@
 
 <%- include('url.preamble.de.tex', this); -%>
 
-<%# acronyms and unicode-math load amsmath, which has to be loaded before cleveref; we need it to load early to avoid option clash -%>
+<%# acronyms and minim-math load amsmath, which has to be loaded before cleveref; we need it to load early to avoid option clash -%>
 <% if (isThesis || feature.abbreviations) { %><%- include('math.preamble.en.tex', this); -%>
 
 <% } -%>
