--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -121,7 +121,7 @@
 
 <%- include('url.preamble.en.tex', this); -%>
 
-<%# acronyms and unicode-math load amsmath, which has to be loaded before cleveref; we need it to load early to avoid option clash -%>
+<%# acronyms and minim-math load amsmath, which has to be loaded before cleveref; we need it to load early to avoid option clash -%>
 <% if (feature.abbreviations) { %><%- include('math.preamble.en.tex', this); -%>
 
 <% } -%>
