Keep unicode-math for overleaf

--- a/generators/app/templates/font.preamble.en.tex
+++ b/generators/app/templates/font.preamble.en.tex
@@ -52,7 +52,7 @@ lualatex
 ###########################################################################
 -%>
 <%= indent %>\usepackage[no-math]{fontspec}
-<%= indent %>\usepackage{minim-math}
+<%= indent %><% if (overleaf || texlive < 2024) { $>\usepackage{unicode-math}<% } else { %>\usepackage{minim-math}<% } %>
 <% switch (font) { case "arial": -%>
 <%# Arial and LuaLaTeX -%>
 <%# -%>
