--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -108,6 +108,7 @@
 <% if (latexcompiler == "both") { -%>
 
 \usepackage{iftex}
+\usepackage{ifplatform}
 
 <% } -%>
 % backticks (`) are rendered as such in verbatim environments.
