--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -122,6 +122,7 @@
 <% if (latexcompiler == "both") { -%>
 
 \usepackage{iftex}
+\usepackage{ifplatform}
 
 <% } -%>
 % backticks (`) werden als solches in verbatim-Umgebungen dargestellt
