No ifplatform for ACM

--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -122,7 +122,8 @@
 <% if (latexcompiler == "both") { -%>
 
 \usepackage{iftex}
-\usepackage{ifplatform}
+<% if (documentclass != "acmart") { -%>\usepackage{ifplatform}
+<% } -%>
 
 <% } -%>
 % backticks (`) werden als solches in verbatim-Umgebungen dargestellt
