--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -108,7 +108,8 @@
 <% if (latexcompiler == "both") { -%>
 
 \usepackage{iftex}
-\usepackage{ifplatform}
+<% if (documentclass != "acmart") { -%>\usepackage{ifplatform}
+<% } -%>
 
 <% } -%>
 % backticks (`) are rendered as such in verbatim environments.
