--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -122,7 +122,7 @@
 <% if (latexcompiler == "both") { -%>
 
 \usepackage{iftex}
-<% if (documentclass != "acmart") { -%>\usepackage{ifplatform}
+<% if ((documentclass != "acmart") && (documentclass != "ieee")) { -%>\usepackage{ifplatform}
 <% } -%>
 
 <% } -%>
