Only thesis make some strange font things

--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -122,7 +122,7 @@
 <% if (latexcompiler == "both") { -%>
 
 \usepackage{iftex}
-<% if ((documentclass != "acmart") && (documentclass != "ieee")) { -%>\usepackage{ifplatform}
+<% if (isThesis) { -%>\usepackage{ifplatform}
 <% } -%>
 
 <% } -%>
