--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -108,7 +108,7 @@
 <% if (latexcompiler == "both") { -%>
 
 \usepackage{iftex}
-<% if ((documentclass != "acmart") && (documentclass != "ieee")) { -%>\usepackage{ifplatform}
+<% if (isThesis) { -%>\usepackage{ifplatform}
 <% } -%>
 
 <% } -%>
