--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -108,6 +108,8 @@
 <% if (latexcompiler == "both") { -%>
 
 \usepackage{iftex}
+<% if (isThesis) { -%>\usepackage{ifplatform}
+<% } -%>
 
 <% } -%>
 % backticks (`) are rendered as such in verbatim environments.
@@ -121,7 +123,7 @@
 
 <%- include('url.preamble.en.tex', this); -%>
 
-<%# acronyms and unicode-math load amsmath, which has to be loaded before cleveref; we need it to load early to avoid option clash -%>
+<%# acronyms and unicode-math/minim-math load amsmath, which has to be loaded before cleveref; we need it to load early to avoid option clash -%>
 <% if (feature.abbreviations) { %><%- include('math.preamble.en.tex', this); -%>
 
 <% } -%>
