--- a/generators/app/templates/font.preamble.en.tex
+++ b/generators/app/templates/font.preamble.en.tex
@@ -53,7 +53,7 @@ lualatex
 -%>
 <%= indent %>\usepackage[no-math]{fontspec}
 <% if (documentclass != "acmart") { -%>
-<%= indent %><% if (overleaf || texlive < 2024) { %>\usepackage{unicode-math}<% } else { %>\usepackage{minim-math}<% } %>
+<%= indent %><% if (overleaf || texlive < 2024 || true) { %>\usepackage{unicode-math}<% } else { %>\usepackage{minim-math}<% } %>
 <% } -%>
 <% switch (font) { case "arial": -%>
 <%# Arial and LuaLaTeX -%>
