Make main.de and main.en consistent

--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -76,6 +76,7 @@
   %               draft    % um zu sehen, wo noch nachgebessert werden muss - wichtig, da Bindungskorrektur mit drin
   draft=false
 ]{scrbook}
+\usepackage{scrlayer-scrpage}
 <% break; case "ustutt": -%>
 
 \documentclass[
