--- a/generators/app/templates/font.preamble.en.tex
+++ b/generators/app/templates/font.preamble.en.tex
@@ -42,7 +42,7 @@
 \makeatother
 
 <% } -%>
-<% if ((latexcompiler == "lualatex") || (latexcompiler == "both")) { indent = '' -%>
+<% if ((reallatexcompiler.startsWith("lualatex")) || (latexcompiler == "both")) { indent = '' -%>
 <% if (latexcompiler == "both") { indent = '  ' -%>
 \ifluatex
 <% } -%>
@@ -159,7 +159,7 @@ lualatex
 <%= indent %>% language "english" or "ngerman" is passed to selnolig by the document class
 <%= indent %>\usepackage{selnolig}
 <% } -%>
-<% if ((latexcompiler != "lualatex") || (latexcompiler == "both")) { -%>
+<% if ((reallatexcompiler.startsWith("lualatex")) || (latexcompiler == "both")) { -%>
 <% if (latexcompiler == "both") { -%>
 \else
 <% } -%>
