--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -116,10 +116,12 @@
 <% if (latexcompiler == "both") { -%>
 
 \usepackage{iftex}
-<% if (isThesis) { -%>\usepackage{ifplatform}
+<% } -%>
+<% if (isThesis) { -%>
+
+\usepackage{ifplatform}
 <% } -%>
 
-<% } -%>
 % backticks (`) werden als solches in verbatim-Umgebungen dargestellt
 % Details unter:
 %   - https://tex.stackexchange.com/a/341057/9075
