Try to fix Inconsolata on Windows

--- a/generators/app/templates/font.preamble.en.tex
+++ b/generators/app/templates/font.preamble.en.tex
@@ -70,7 +70,11 @@ lualatex
 <%= indent %>% No [Ligatures=TeX], because we want " rendered as upquotes, not as typographic correct ones
 <%= indent %>% shapely l, upright quotes
 <%= indent %>% If it is too large, add ",Scale=.9"
-<%= indent %>\setmonofont[StylisticSet={1,3}]{Inconsolatazi4}
+<%= indent %>\ifwindows
+<%= indent %>  \setmonofont[StylisticSet={1,3}]{Inconsolata}
+<%= indent %>\else
+<%= indent %>  \setmonofont[StylisticSet={1,3}]{Inconsolatazi4}
+<%= indent %>\fi
 <% break; case "times": -%>
 <%# Times New Roman and LuaLaTeX -%>
 <%# -%>
@@ -97,7 +101,11 @@ lualatex
 <% } else { -%>
 <%= indent %>% shapely l, upright quotes
 <%= indent %>% Normal scaling is too large --> thus, we use ",Scale=.9"
-<%= indent %>\setmonofont[StylisticSet={1,3},Scale=.9]{Inconsolatazi4}
+<%= indent %>\ifwindows
+<%= indent %>  \setmonofont[StylisticSet={1,3},Scale=.9]{Inconsolata}
+<%= indent %>\else
+<%= indent %>  \setmonofont[StylisticSet={1,3},Scale=.9]{Inconsolatazi4}
+<%= indent %>\fi
 <% } -%>
 <%  break; default: -%>
 <%# "default" font configuration -%>
@@ -119,7 +127,11 @@ lualatex
 <%= indent %>% No [Ligatures=TeX], because we want " rendered as upquotes, not as typographic correct ones
 <%= indent %>% shapely l, upright quotes
 <%= indent %>% If it is too large, add ",Scale=.9"
-<%= indent %>\setmonofont[StylisticSet={1,3}]{Inconsolatazi4}
+<%= indent %>\ifwindows
+<%= indent %>  \setmonofont[StylisticSet={1,3}]{Inconsolata}
+<%= indent %>\else
+<%= indent %>  \setmonofont[StylisticSet={1,3}]{Inconsolatazi4}
+<%= indent %>\fi
 <% break; case "scientific-thesis": -%>
 
 <%= indent %>% TODO
