Add initial support for University of Hamburg

--- a/generators/app/templates/xcolor.preamble.de.tex
+++ b/generators/app/templates/xcolor.preamble.de.tex
@@ -10,3 +10,7 @@
 \definecolor{pdflinkcolor}{rgb}{0,0,0.6}
 \definecolor{pdfcitecolor}{rgb}{0,0,0.6}
 <% } -%>
+<% if ((documentclass == "scientific-thesis") && (thesisvariant == "university-of-hamburg")) { -%>
+
+\definecolor{uhhred}{cmyk}{0,100,100,0}
+<% } -%>
