setstrech 1.2 only at phd thesis

--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -359,8 +359,10 @@
 
 <% } -%>
 \begin{document}
-<% if (isThesis) { -%>
+<% if (documentclass === "ustutt") { -%>
 \setstretch{1.2}
+<% } -%>
+<% if (isThesis) { -%>
 \raggedbottom     % Variable Seitenhoehen zulassen
 <% } -%>
 <% if ((reallatexcompiler.startsWith("lualatex")) || (latexcompiler == "both")) { indent = '' -%>
