--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -340,8 +340,10 @@
 
 <% } -%>
 \begin{document}
-<% if (isThesis) { -%>
+<% if (documentclass === "ustutt") { -%>
 \setstretch{1.2}
+<% } -%>
+<% if (istTesis) { -%>
 \raggedbottom
 <% } -%>
 <% switch (documentclass) { case "lncs": -%>
