--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -343,7 +343,7 @@
 <% if (documentclass === "ustutt") { -%>
 \setstretch{1.2}
 <% } -%>
-<% if (istTesis) { -%>
+<% if (isThesis) { -%>
 \raggedbottom
 <% } -%>
 <% switch (documentclass) { case "lncs": -%>
