--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -330,6 +330,9 @@
 \fi
 <% break; case "scientific-thesis": -%>
 
+<% if (thesisvariant == "university-of-hamburg") { -%>
+\usepackage{geometry}
+<% } -%>
 <%- include('scientific-thesis-cover.preamble.en.tex', this); %>
 <% break; } -%>
 <% if ((latexcompiler == "pdflatex") || (latexcompiler == "both")) { indent = '' -%>
@@ -356,8 +359,10 @@
 
 <% } -%>
 \begin{document}
-<% if (isThesis) { -%>
+<% if (documentclass === "ustutt") { -%>
 \setstretch{1.2}
+<% } -%>
+<% if (isThesis) { -%>
 \raggedbottom     % Variable Seitenhoehen zulassen
 <% } -%>
 <% if ((reallatexcompiler.startsWith("lualatex")) || (latexcompiler == "both")) { indent = '' -%>
@@ -465,7 +470,43 @@
 \begin{abstract}
 <% break; case "scientific-thesis": -%>
 \pagenumbering{arabic}
+<% if (thesisvariant == "ustutt") { -%>
 \Titelblatt
+<% } else {-%>
+\frontmatter
+\newgeometry{centering,left=2cm,right=2cm,top=2cm,bottom=2cm}
+\begin{titlepage}
+%\includegraphics[scale=0.3]{figures/UHH-Logo_2010_Farbe_CMYK.pdf}
+\includegraphics[scale=0.3]{figures/UHH-Logo_2010_Farbe_CMYK.png}
+\vspace*{2cm}
+\Large
+\begin{center}
+              {\color{uhhred}\textbf{\so{BACHELORTHESIS}}}
+%TODO ...oder {\color{uhhred}\textbf{\so{MASTERTHESIS}}}
+\vspace*{2.0cm}\\
+{\LARGE \textbf{Titel}}
+\vspace*{2.0cm}\\
+vorgelegt von
+\vspace*{0.4cm}\\
+Max Musterstudent
+\end{center}
+\vfill
+
+\noindent
+{\small
+MIN-Fakultät\\[.2cm]
+Fachbereich Informatik \\[.2cm]
+Ggf. Professur/Institut \\[.2cm]       %TODO Optional, entweder "Ggf. " oder ganze Zeile löschen
+Studiengang: Wirtschaftsinformatik \\[.2cm]
+Matrikelnummer: 1234567 \\[.5cm]
+Ggf. Abgabedatum: XX.XX.20XX \\[.5cm]  %TODO Optional, entweder "Ggf. " oder ganze Zeile löschen
+Erstgutachterin: Prof. Dr. Bertha Beispiel \\[.25cm]
+Zweitgutachter: Dr. Eduard Exempel               %TODO Bei Bedarf Geschlechter der Gutachter/innen anpassen
+}
+\end{titlepage}
+
+\restoregeometry
+<% } -%>
 
 \pagestyle{plain.scrheadings}
 \renewcommand*{\chapterpagestyle}{plain.scrheadings}
@@ -664,6 +705,9 @@ The following is typeset for both ustutt and scientific-thesis.
 
 \tableofcontents
 <% break; } -%>
+<% if (thesisvariant == "university-of-hamburg") { -%>
+\mainmatter
+<% } -%>
 
 <% if (howtotext) { -%>
 %%% ===============================================================================
@@ -1304,7 +1348,37 @@ Alle Links wurden zuletzt am 29.03.2021 geprüft.
 \pagestyle{empty}
 \renewcommand*{\chapterpagestyle}{empty}
 <% if (documentclass == "scientific-thesis") { -%>
+<% if (thesisvariant == "ustutt") { -%>
 \Versicherung
+<% } else { -%>
+\clearpage
+\backmatter
+\thispagestyle{empty}
+
+\vspace*{\fill}
+\pagestyle{empty}
+
+{\normalsize
+\begin{center}\textbf{Eidesstattliche Erklärung}\end{center}
+\blindtext[1]
+\vspace*{1cm}\\
+Hamburg, den XX.XX.20XX
+\hspace*{\fill}\begin{tabular}{@{}l@{}}\hline
+\makebox[5cm]{Vorname Nachname}
+\end{tabular}
+\vspace*{3cm}
+
+%TODO Dies ist optional, ggf. löschen!
+\begin{center}\textbf{Veröffentlichung}\end{center}
+\blindtext[1]
+\vspace*{1cm}\\
+Hamburg, den XX.XX.20XX
+\hspace*{\fill}\begin{tabular}{@{}l@{}}\hline
+\makebox[5cm]{Vorname Nachname}
+\end{tabular}
+}
+\vspace*{\fill}
+<% } -%>
 <% } else { -%>
 
 <% } -%>
