--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -79,7 +79,7 @@
 <% break; case "ustutt": -%>
 
 \documentclass[
-  fontsize=10pt
+  fontsize=10pt,
   numbers=noenddot,
   english,  % English as main language; this parameter is passed to other packages (e.g., selnolig in the case of lualatex)
   paper=a5,
@@ -126,7 +126,7 @@
 <%- include('url.preamble.en.tex', this); -%>
 
 <%# acronyms and unicode-math/minim-math load amsmath, which has to be loaded before cleveref; we need it to load early to avoid option clash -%>
-<% if (feature.abbreviations) { %><%- include('math.preamble.en.tex', this); -%>
+<% if (isThesis || feature.abbreviations) { %><%- include('math.preamble.en.tex', this); -%>
 
 <% } -%>
 <%- include('font.preamble.en.tex', this); -%>
@@ -139,7 +139,7 @@
 <% } -%>
 \usepackage{graphicx}
 
-<% if (documentclass == 'ustutt') { -%>
+<% if (isThesis) { -%>
 % Base folder, so there is no need to repeat this over and over again.
 \graphicspath{ {figures/} }
 
@@ -311,11 +311,14 @@
 \fi
 <% break; case "scientific-thesis": -%>
 
+<% if (thesisvariant == "university-of-hamburg") { -%>
+\usepackage{geometry}
+<% } -%>
 <%- include('scientific-thesis-cover.preamble.en.tex', this); %>
 <% break; } -%>
-<% if ((latexcompiler == "pdflatex") || (latexcompiler == "both")) { -%>
+<% if ((latexcompiler == "pdflatex") || (latexcompiler == "both")) { indent = '' -%>
 
-<% if (latexcompiler == "both") { -%>
+<% if (latexcompiler == "both") { indent = '  ' -%>
 \ifpdftex
 <% } -%>
 <%= indent %>% Enable copy and paste of text from the PDF
@@ -333,10 +336,14 @@
 \fi
 <% } -%>
 <% } -%>
-<% if (isThesis) { %><%- include('thesis-additions.en.tex', this); %><% } -%>
+<% if (isThesis) { %><%- include('thesis-additions.en.tex', this); %>
+
+<% } -%>
 \begin{document}
-<% if (isThesis) { -%>
+<% if (documentclass === "ustutt") { -%>
 \setstretch{1.2}
+<% } -%>
+<% if (isThesis) { -%>
 \raggedbottom
 <% } -%>
 <% switch (documentclass) { case "lncs": -%>
@@ -433,7 +440,43 @@
 \begin{abstract}
 <% break; case "scientific-thesis": -%>
 \pagenumbering{arabic}
+<% if (thesisvariant == "ustutt") { -%>
 \Titelblatt
+<% } else {-%>
+\frontmatter
+\newgeometry{centering,left=2cm,right=2cm,top=2cm,bottom=2cm}
+\begin{titlepage}
+%\includegraphics[scale=0.3]{figures/UHH-Logo_2010_Farbe_CMYK.pdf}
+\includegraphics[scale=0.3]{figures/UHH-Logo_2010_Farbe_CMYK.png}
+\vspace*{2cm}
+\Large
+\begin{center}
+              {\color{uhhred}\textbf{\so{BACHELORTHESIS}}}
+%TODO ...oder {\color{uhhred}\textbf{\so{MASTERTHESIS}}}
+\vspace*{2.0cm}\\
+{\LARGE \textbf{Titel}}
+\vspace*{2.0cm}\\
+vorgelegt von
+\vspace*{0.4cm}\\
+Max Musterstudent
+\end{center}
+\vfill
+
+\noindent
+{\small
+MIN-Fakultät\\[.2cm]
+Fachbereich Informatik \\[.2cm]
+Ggf. Professur/Institut \\[.2cm]       %TODO Optional, entweder "Ggf. " oder ganze Zeile löschen
+Studiengang: Wirtschaftsinformatik \\[.2cm]
+Matrikelnummer: 1234567 \\[.5cm]
+Ggf. Abgabedatum: XX.XX.20XX \\[.5cm]  %TODO Optional, entweder "Ggf. " oder ganze Zeile löschen
+Erstgutachterin: Prof. Dr. Bertha Beispiel \\[.25cm]
+Zweitgutachter: Dr. Eduard Exempel               %TODO Bei Bedarf Geschlechter der Gutachter/innen anpassen
+}
+\end{titlepage}
+
+\restoregeometry
+<% } -%>
 
 \pagestyle{plain.scrheadings}
 \renewcommand*{\chapterpagestyle}{plain.scrheadings}
@@ -628,6 +671,9 @@ The following is typeset for both ustutt and scientific-thesis.
 
 \tableofcontents
 <% break; } -%>
+<% if (thesisvariant == "university-of-hamburg") { -%>
+\mainmatter
+<% } -%>
 
 <% if (howtotext) { -%>
 %%% ===============================================================================
@@ -1262,7 +1308,37 @@ All links were last followed on October 5, 2020.
 \pagestyle{empty}
 \renewcommand*{\chapterpagestyle}{empty}
 <% if (documentclass == "scientific-thesis") { -%>
+<% if (thesisvariant == "ustutt") { -%>
 \Versicherung
+<% } else { -%>
+\clearpage
+\backmatter
+\thispagestyle{empty}
+
+\vspace*{\fill}
+\pagestyle{empty}
+
+{\normalsize
+\begin{center}\textbf{Eidesstattliche Erklärung}\end{center}
+\blindtext[1]
+\vspace*{1cm}\\
+Hamburg, den XX.XX.20XX
+\hspace*{\fill}\begin{tabular}{@{}l@{}}\hline
+\makebox[5cm]{Vorname Nachname}
+\end{tabular}
+\vspace*{3cm}
+
+%TODO Dies ist optional, ggf. löschen!
+\begin{center}\textbf{Veröffentlichung}\end{center}
+\blindtext[1]
+\vspace*{1cm}\\
+Hamburg, den XX.XX.20XX
+\hspace*{\fill}\begin{tabular}{@{}l@{}}\hline
+\makebox[5cm]{Vorname Nachname}
+\end{tabular}
+}
+\vspace*{\fill}
+<% } -%>
 <% } else { -%>
 
 <% } -%>
